fixed opactity too low footer links

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -10,7 +10,6 @@
 
 .footer-container a {
     color: white;
-    opacity: 75%;
     padding: 9px 0;
     text-transform: capitalize;
 }
@@ -65,5 +64,4 @@ p {
 
 img {
     width: 20px;
-    opacity: 20%;
 }
